clogs/assets/hello-worldV2.yml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: helloworld-go
  namespace: default
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: docker.io/sylus/helloworld-go
            env:
              - name: TARGET
                value: "VersionTwo"
