clogs/assets/zookeeper.yml
apiVersion: v1
kind: Namespace
metadata:
  name: testspace
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: testspace
spec:
  ports:
    - name: tcp
      nodePort: 31008
      port: 2181
      targetPort: 2181
      protocol: TCP
  type: NodePort
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: testspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      annotations:
      labels:
        app: zookeeper
    spec:
      containers:
        - env:
            - name: GRPC_PORT
              value: "8080"
          image: rmohammad/zookeeper-server:1
          name: zookeeper
          ports:
            - containerPort: 8080
              name: grpc
          resources:
            requests:
              cpu: 100m
      serviceAccountName: zookeeper
